--- a/firstOneJs/app/style.css
+++ b/firstOneJs/app/style.css
@@ -47,7 +47,7 @@ a:hover{text-decoration:none}
 
 .minipic {float:right;width:400px;height:80px;margin:32px 0 0 3px;clear:both;}
 .minipic span {float:left;position:relative;}
-.minipic span p {margin-top:12px;text-align:center;}
+.minipic span p {width:51px;margin-top:12px;text-align:center;word-wrap:break-word;word-break:break-all;}
 .mimg {margin:0px 0 0 12px;}
 .mimg2 {margin:0px 0 0 26px;}
 .mimg3 {margin:0px 0 0 25px;}
@@ -55,7 +55,7 @@ a:hover{text-decoration:none}
 
 .minipic2 {float:right;width:400px;height:80px;margin:28px 0 0 3px;clear:both;}
 .minipic2 span {float:left;position:relative;}
-.minipic2 span p {margin-top:12px;text-align:center;}
+.minipic2 span p {margin-top:12px;text-align:center;word-wrap:break-word;word-break:break-all;}
 .m2img {margin:0px 0 0 12px;}
 .m2img2 {margin:0px 0 0 26px;}
 .m2img3 {margin:0px 0 0 25px;}
@@ -68,7 +68,7 @@ a:hover{text-decoration:none}
 .m3img2 {margin:0px 0 0 26px;}
 .m3img3 {margin:0px 0 0 25px;}
 .btn3{margin:23px 0 0 38px;}
-.button2 {float:left;width:129px;height:80px;margin:21px 0 0 324px;display:inline;}
+.button2 {float:left;width:129px;height:80px;margin:21px 0 0 324px;display:inline;cursor:pointer;}
 
 
 .minipic span input,.minipic2 span input,.minipic3 span input {position:absolute;width:14px;height:14px;top:36px;right:0;}
